# memtailor

./: .gitignore  Makefile.am  README.md  configure.ac  fixspace  license.txt
src/: memtailor.cpp  memtailor.h
src/memtailor/: Arena.cpp  Arena.h  ArenaVector.h  BufferPool.h  MemoryBlocks.cpp  MemoryBlocks.h  stdinc.h
src/test/: ArenaTest.cpp  BufferPoolTest.cpp  MemoryBlocksTest.cpp
